package it.unipi.lsmsdb.stocksim.client;

/**
 * Sotcksim Client implementation.
 *
 * @author Marco Pinna, Rambod Rahmani, Yuri Mazzuoli.
 */
public class Client {
    public static void main(String[] args) {

    }
}
